<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">5G定位</string>
    <string name="reset">重置</string>
    <string name="setting">设置</string>
    <string name="back">返回</string>
    <string name="complete">完成</string>
    <string name="stop">结束</string>
    <string name="confirm">确认</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="add">添加</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="mobile">移动</string>
    <string name="unicom">联通</string>
    <string name="telecom">电信</string>
    <string name="reminder">提示</string>
    <string name="warning">警告</string>
    <string name="search">搜索</string>
    <string name="query">查询</string>
    <string name="exit">退出</string>
    <string name="known">知道了</string>
    <string name="login">登录</string>
    <string name="list_empty">数据列表为空</string>
    <string name="file_list_empty">文件列表为空</string>
    <string name="save_data">保存数据</string>
    <string name="serial_number">No.</string>
    <string name="imsi">IMSI</string>
    <string name="arfcn">频点</string>
    <string name="pci">PCI</string>
    <string name="time">时间</string>
    <string name="remarks">备注</string>
    <string name="catch_list">侦码列表</string>
    <string name="timingOffset">时偏</string>
    <string name="desc_city">城市(如：697*1000 = 697000)</string>
    <string name="format_time_offset">时偏数据格式：697*1000 = 697000</string>
    <string name="city">城市</string>
    <string name="city_list">城市列表</string>
    <string name="add_city">添加城市</string>
    <string name="selete_city">选择城市: </string>
    <string name="title_sel_city">选择城市</string>
    <string name="reboot">重启基带</string>
    <string name="rebooting">设备重启中，请稍后再试</string>
    <string name="reboot_device">确认重启设备?</string>
    <string name="stop_trace_reminder">确认结束定位?</string>
    <string name="exit_app_confirm">退出应用？</string>
    <string name="bs_version">基带版本</string>
    <string name="bs_set_time">设置基带时间</string>
    <string name="bs_bl_list">设置黑名单</string>
    <string name="trace_cfg">定位配置</string>
    <string name="start_trace">开始定位</string>
    <string name="stop_trace">结束定位</string>
    <string name="imsi_list">侦码列表</string>
    <string name="black_list">黑名单IMSI列表</string>
    <string name="city_time_offset">城市时偏配置</string>
    <string name="imsi_null">无IMSI数据</string>
    <string name="device_id_confirm">"确定将设备编号配置为："</string>
    <string name="error_same_imsi">已存在在相同IMSI号。</string>
    <string name="error_bl_imsi">最多同时配置100个IMSI号。</string>
    <string name="error_imsi">IMSI数据错误,正确值为：15位数字。</string>
    <string name="error_arfcn">频点不能为空。</string>
    <string name="error_not_support_arfcn">暂不支持此频点，请确认是否输入有误？</string>
    <string name="error_pci">PCI数据错误,取值范围：0~1007。</string>
    <string name="error_null">数据不能为空。</string>
    <string name="error_version">版本查询未返回，请重试。</string>
    <string name="error_timingOffset">时偏不能为空。</string>
    <string name="error_device_id">设备编号不能为空。</string>
    <string name="error_city">城市名称不能为空。</string>
    <string name="error_same_city">存在相同的城市。</string>
    <string name="delete_confirm">确定删除？</string>
    <string name="title_city">城市</string>
    <string name="set_as_cur_city">设为当前城市</string>
    <string name="delete_city">删除城市信息</string>
    <string name="set_city_confirm">确定设置: %s 为当前城市</string>
    <string name="delete_city_confirm">确定删除: %s</string>
    <string name="ed_server">设备名称&#058;</string>
    <string name="ed_wifi_ap">当前连接编号&#058;</string>
    <string name="ed_wifi_psw">WIFI密码&#058;</string>
    <string name="ed_user">用户名&#058;</string>
    <string name="ed_psw">密码&#058;</string>
    <string name="ed_plmn">PLMN&#058;</string>
    <string name="ed_arfcn">频点&#058;</string>
    <string name="ed_para_s">Para_s&#058;</string>
    <string name="ed_pci">PCI&#058;</string>
    <string name="ed_imsi">IMSI&#058;</string>
    <string name="status">状态&#058;</string>
    <string name="ed_time_offset">时偏&#058;</string>
    <string name="ed_pwr">发射功率&#058;</string>
    <string name="ed_city">城市&#058;</string>
    <string name="ed_device_id">请输入设备编号&#058;</string>
    <string name="ed_timingOffset">时偏&#058;</string>
    <string name="ed_file_path">文件路径&#058;</string>
    <string name="ed_file_name">文件名&#058;</string>
    <string name="catch_count">侦码个数：%d</string>
    <string name="input_file_name">请输入文件名&#058;</string>
    <string name="imsi_count">侦码数&#058;</string>
    <string name="imsi_detect">检测到IMSI&#058;</string>
    <string name="ssb_bitmap">波束配置</string>
    <string name="ssb_bitmap_single">单波束</string>
    <string name="ssb_bitmap_dual">多波束</string>
    <string name="txpwrcfg">配置功率</string>
    <string name="rb_max">最远</string>
    <string name="rb_big">较远</string>
    <string name="rb_far">远距</string>
    <string name="rb_normal">标准</string>
    <string name="rb_near">近距</string>
    <string name="file_name">文件名&#058;</string>
    <string name="file_path">文件路径&#058;</string>
    <string name="rb_mode">小区模式</string>
    <string name="rb_car">车载</string>
    <string name="rb_portable">便捷</string>
    <string name="scan_arfcn">扫频配置</string>
    <string name="rb_mobile">移动</string>
    <string name="rb_unicom">联通</string>
    <string name="rb_telecom">电信</string>
    <string name="tv_tac">TAC</string>
    <string name="tv_nci">NCI</string>
    <string name="tv_arfcn">ARFCN</string>
    <string name="tv_pci">PCI</string>
    <string name="tv_rx">RX</string>
    <string name="tv_act">Act.</string>
    <string name="tv_import">导入</string>
    <string name="query_imsi">请输入要查询的IMSI&#058;</string>
    <string name="query_fail">未找到相应的IMSI号</string>
    <string name="bs_upgrade">基带升级</string>
    <string name="bs_log">基带LOG</string>
    <string name="get_log_success">设备LOG信息获取完成，请到"文件管理--NR5G--日志与升级"中获取</string>
    <string name="get_log_fail">设备LOG信息获取失败，请重试</string>
    <string name="error_log_name">LOG文件名称长度不能超过35个byte</string>
    <string name="default_file_name">默认为当前日期</string>
    <string name="upgrade_files_list">升级文件列表</string>
    <string name="state_no_ready">设备未准备就绪，请稍后再试</string>
    <string name="state_tracing">定位中，请先结束定位</string>
    <string name="state_device_start">状态: 设备开机中</string>
    <string name="state_socket_conecting">状态: 设备连接中</string>
    <string name="state_socket_conected">状态: 设备已连接</string>
    <string name="state_socket_disconnect">状态: 设备已断开</string>
    <string name="state_wait_cfg">状态: 设备准备就绪</string>
    <string name="state_set_black_list">状态: 配置黑名单</string>
    <string name="state_set_arfcn">状态: 配置频点</string>
    <string name="state_tx_pwr">状态: 配置功率衰减</string>
    <string name="state_set_imsi">状态: 配置IMSI(定位中)</string>
    <string name="state_upgrading">状态: 升级中</string>
    <string name="state_catch">状态: 抓号中</string>
    <string name="state_trace">状态: 定位中</string>
    <string name="state_scan_arfcn">状态: 扫频中</string>
    <string name="state_stop_arfcn">状态: 结束扫频中</string>
    <string name="state_stop_trace">状态: 结束定位中</string>
    <string name="state_reboot_cfg">状态: 配置基带重启</string>
    <string name="state_rebooting">状态: 设备重启中</string>
    <string name="state_set_reboot_fail">状态: 设备重启失败</string>
    <string name="state_change_wifi">状态: 设备连接切换中</string>
    <string name="state_set_black_list_error">状态: 配置黑名单失败</string>
    <string name="state_set_arfcn_error">状态: 配置频点失败</string>
    <string name="state_set_imsi_error">状态: 配置IMSI失败</string>
    <string name="state_stop_trace_error">状态: 结束定位失败</string>
    <string name="state_timing_outof_sync">[ GPS同步中 ]</string>
    <string name="state_timing_in_sync">[ GPS已同步 ]</string>
    <string name="state_not_trace">非定位状态，无法配置增益</string>
    <string name="state_mode_car">车载模式，无法配置增益</string>
    <string name="state_upgrade_copying_file">状态: 升级文件拷贝中</string>
    <string name="state_upgrade_copying_file_fail">升级文件拷贝中失败，请重试</string>
    <string name="state_upgrade_downloading">基带升级：固件下载中</string>
    <string name="state_upgrade_ing">基带升级：固件升级中</string>
    <string name="state_upgrade_restart">基带升级：设备重启中</string>
    <string name="state_upgrade_download_fail">基带升级：固件下载失败</string>
    <string name="state_upgrade_fail">基带升级：固件升级失败</string>
    <string name="state_upgrade_succ">基带升级：固件升级成功</string>
    <string name="state_get_log">状态: 正在读取设备LOG信息</string>
    <string name="title_login">请输入用户名密码</string>
    <string name="tv_user">用户名&#058;</string>
    <string name="tv_psw">密码&#058;</string>
    <string name="tv_ajbh">案件编号&#058;</string>
    <string name="login_fail">用户名或密码错误，请重新输入</string>
    <string name="slide_title_ver">版本信息</string>
    <string name="slide_local_app_ver">APP版本&#058;</string>
    <string name="slide_sevice_app_ver">设备版本&#058;</string>
    <string name="slide_bs_version">基带版本&#058;</string>
    <string name="slide_trace_para">定位信息</string>
    <string name="slide_config_menu">配置菜单</string>
    <string name="slide_timingOffset">时偏配置</string>
    <string name="slide_arfcnSetChange">频点轮循配置</string>
    <string name="op_log">读取黑匣子</string>
    <string name="op">黑匣子</string>
    <string name="delete_op_log">删除黑匣子</string>
    <string name="slide_getLog">读取基带日志</string>
    <string name="slide_update">升级基带版本</string>
    <string name="slide_setting">设置</string>
    <string name="slide_srs_setting">SRS参数配置</string>
    <string name="slide_user_guide">定位向导</string>
    <string name="slide_fdd">H18-FDD</string>
    <string name="slide_cdma">H18-CDMA</string>
    <string name="slide_sys_mode_tdd">工作模式切换</string>
    <string name="slide_sys_mode_fdd">工作模式切换</string>
    <string name="slide_connect_to_d35">连接到服务端</string>
    <string name="slide_bind_to_d35">扫码绑定</string>
    <string name="slide_rebind_to_d35">重新扫码绑定</string>
    <string name="slide_exit_engineer">退出测试模式</string>
    <string name="slide_tx_power">最大发射功率</string>
    <string name="slide_catch_para_setting">参数配置</string>
    <string name="slide_catch_arfcn">侦码频点列表</string>
    <string name="slide_catch_fdd_fdd_on">联通(FDD)侦码已开启</string>
    <string name="slide_catch_fdd_fdd_off">联通(FDD)侦码已关闭</string>
    <string name="slide_catch_fdd_cdma_on">电信(FDD)侦码已开启</string>
    <string name="slide_catch_fdd_cdma_off">电信(FDD)侦码已关闭</string>
    <string name="slide_catch_fdd_tdd_on">TDD(B3|B8)侦码已开启</string>
    <string name="slide_catch_fdd_tdd_off">TDD(B3|B8)侦码已关闭</string>
    <string name="slide_trace_bar">定位报值柱状图</string>
    <string name="slide_wifi_bar">WIFI定位报值柱状图</string>
    <string name="slide_car_mode">车载工作模式</string>
    <string name="slide_barsrs_off">单兵工作模式已关闭</string>
    <string name="slide_tracetype_on">管控模式已开启</string>
    <string name="slide_tracetype_off">管控模式已关闭</string>
    <string name="slide_abroad_on">支持国外定位已开启</string>
    <string name="slide_abroad_off">支持国外定位已关闭</string>
    <string name="slide_prach_cfg_on">CS定位已开启</string>
    <string name="slide_prach_cfg_off">CS定位已关闭</string>
    <string name="slide_5g_int">5G设备设置</string>
    <string name="slide_5g_int_on">5G设备已连接</string>
    <string name="slide_5g_int_off">5G设备未连接[点击开始连接]</string>
    <string name="slide_is_cdma_arfcn">是否为联通(FDD)频点</string>
    <string name="slide_bw_5">P11定位已关闭</string>
    <string name="slide_bw_20">P11定位已开启</string>
    <string name="state_scanning">扫频中，请先结束扫频</string>
    <string name="device_start">设备未准备就绪</string>
    <string name="reminder_upgrading">设备升级中，请稍后再试</string>
    <string name="reminder_get_log">设备取LOG中，请稍后再试</string>
    <string name="reminder_rebooting">设备重启中，请稍后再试</string>
    <string name="state_phy_abnormal">设备异常，须掉电重启</string>
    <string name="state_reboot">设备重启中</string>
    <string name="state_set_time_fail">同步设备时间失败</string>
    <string name="state_get_version_fail">读取设备版本信息失败</string>
    <string name="freq_scan">扫频</string>
    <string name="band_select">频段选择</string>
    <string name="set_pa">请选择设备类型</string>
    <string name="device_type_0">G70</string>
    <string name="device_type_1">G73c</string>
    <string name="device_type_2">C70</string>
</resources>