<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_serial_number"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/serial_number"
        android:textColor="@color/main_text_color"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_tmsi"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingLeft="3dp"
        android:paddingTop="6dp"
        android:paddingRight="3dp"
        android:paddingBottom="6dp"
        android:text="@string/imsi"
        android:textColor="@color/main_text_color"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_arfcn"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/arfcn"
        android:textColor="@color/main_text_color"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_pci"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/pci"
        android:textColor="@color/main_text_color"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center"
        android:padding="3dp"
        android:text="@string/time"
        android:textColor="@color/main_text_color"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_mark"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center"
        android:padding="3dp"
        android:singleLine="true"
        android:text="@string/remarks"
        android:textColor="@color/main_text_color"
        android:textSize="14sp"
        android:visibility="gone" />

</LinearLayout>