<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bar"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/set_pa"
        android:textColor="@color/title_text"
        android:textSize="20sp" >
    </TextView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/line_color" />
    <RadioGroup
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <RadioButton
            android:id="@+id/device_type_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_type_0"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/device_type_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/device_type_1"/>
        <RadioButton
            android:id="@+id/device_type_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/device_type_2"/>
    </RadioGroup>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bgl_big"
            android:text="@string/confirm"
            android:textColor="@color/btn_text"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bgl_big"
            android:text="@string/cancel"
            android:textColor="@color/btn_text"
            android:textSize="18dp" />
    </LinearLayout>

</LinearLayout>