<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bar"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/catch_list"
        android:textColor="@color/title_text"
        android:textSize="20sp" >
    </TextView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/line_color" />

    <LinearLayout
        android:id="@+id/ll_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="3dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="3"
            android:background="@drawable/shape_f_search"
            android:drawableLeft="@mipmap/icon_search"
            android:hint="@string/query"
            android:inputType="number"
            android:maxLength="15"
            android:textColor="@color/main_text_color"
            android:textColorHint="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_save_data"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bgl_big"
            android:text="@string/save_data"
            android:textColor="@color/btn_text"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_loc_bar"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/serial_number"
            android:textColor="@color/main_text_color"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:paddingLeft="3dp"
            android:paddingTop="6dp"
            android:paddingRight="3dp"
            android:paddingBottom="6dp"
            android:text="@string/imsi"
            android:textColor="@color/main_text_color"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/arfcn"
            android:textColor="@color/main_text_color"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/pci"
            android:textColor="@color/main_text_color"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/time"
            android:textColor="@color/main_text_color"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:padding="3dp"
            android:singleLine="true"
            android:text="@string/remarks"
            android:textColor="@color/main_text_color"
            android:textSize="14sp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/imsi_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/line_color"
            android:dividerHeight="1dip"
            android:drawSelectorOnTop="false" />
    </LinearLayout>

</LinearLayout>