<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bar"
        android:gravity="center"
        android:padding="10dp"
        android:text="5G设置"
        android:textColor="@color/title_text"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ed_arfcn"
                    android:textColor="@color/state_text_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_arfcn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/main_text_color"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ed_pci"
                    android:textColor="@color/state_text_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_pci"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textColor="@color/main_text_color"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="100"
                android:textColor="@color/red"
                android:textSize="50sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/status"
        android:textColor="@color/red"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:baselineAligned="false"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_trace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bgl_big"
            android:text="@string/start_trace"
            android:textColor="@color/btn_text"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btn_imsi_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_bgl_big"
            android:text="@string/imsi_list"
            android:textColor="@color/btn_text"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btn_pwr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_bgl_big"
            android:text="@string/txpwrcfg"
            android:textColor="@color/btn_text"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btn_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_bgl_big"
            android:text="@string/rb_mode"
            android:textColor="@color/btn_text"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btn_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_bgl_big"
            android:text="@string/bs_version"
            android:textColor="@color/btn_text"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btn_scan_arfcn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_bgl_big"
            android:text="@string/scan_arfcn"
            android:textColor="@color/btn_text"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btn_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_bgl_big"
            android:text="@string/city_time_offset"
            android:textColor="@color/btn_text"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btn_reboot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_bgl_big"
            android:text="@string/reboot"
            android:textColor="@color/btn_text"
            android:textSize="18dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="V1.0.0 [ 2021-01-20 09:31]"
        android:textColor="@color/state_text_color"
        android:textSize="18sp" />
</LinearLayout>