<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="10dp"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/item_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/time"
        android:textColor="@color/tblack"
        android:textSize="12sp"/>
    <TextView
        android:id="@+id/item_imsi"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:text="@string/imsi"
        android:paddingStart="6dp"
        android:textColor="@color/tblack"
        android:textSize="12sp"/>
    <TextView
        android:id="@+id/item_arfcn"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/arfcn"
        android:paddingStart="6dp"
        android:textColor="@color/tblack"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/item_cell"
        android:layout_width="0dp"
        android:layout_weight="0.5"
        android:layout_height="wrap_content"
        android:text="通道"
        android:gravity="center"
        android:textColor="@color/tblack"
        android:textSize="12sp" />
</LinearLayout>